# abattlemetrics

./: .git-blame-ignore-revs  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
abattlemetrics/: __init__.py  client.py  datapoint.py  errors.py  iterators.py  limiter.py  mixins.py  player.py  server.py  session.py  utils.py
examples/: getplayercount.py  getserver.py  matchplayeridentifier.py  playerlist.py  sessionhistory.py  timeplayedhistory.py
src/abattlemetrics/: __init__.py  client.py  datapoint.py  errors.py  iterators.py  limiter.py  mixins.py  player.py  server.py  session.py  utils.py
