[metadata]
name = abattlemetrics
version = attr: abattlemetrics.__version__
description = An asyncio wrapper for the battlemetrics API.
long_description = file: README.md
author = thegamecracks
url = https://github.com/thegamecracks/abattlemetrics
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Framework :: AsyncIO
    Framework :: aiohttp
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.8
install_requires =
    aiohttp
    python-dateutil
